[gd_scene load_steps=28 format=2]

[ext_resource path="res://player/man_walk.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://player/woman_walk.png" type="Texture" id=3]
[ext_resource path="res://fx/throw_white.png" type="Texture" id=4]
[ext_resource path="res://fx/jump_puff.png" type="Texture" id=5]
[ext_resource path="res://sound/step4.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/step1.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/step2.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/step3.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/rock jump maybe 2.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/pickup3.wav" type="AudioStream" id=12]
[ext_resource path="res://sound/throw.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/springjump.wav" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 9.5 )

[sub_resource type="Animation" id=2]
resource_name = "Down"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Up"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stepfx1"
}, {
"args": [  ],
"method": "stepfx2"
} ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.5, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.5, 2.09944 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Throw:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Throw:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.16, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 2.62749, 0.8161 )

[sub_resource type="Animation" id=12]
resource_name = "Init"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("JumpPuffS:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Puff"
length = 0.4
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("JumpPuffS:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2147483713
collision_mask = 81
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 7
frame = 1

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 3 )
hframes = 7
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -9.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Down = SubResource( 2 )
anims/Still = SubResource( 3 )
anims/Up = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="Hold" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hold"]
position = Vector2( 0.5, -10 )
shape = SubResource( 6 )

[node name="Bounce" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounce"]
position = Vector2( 0.5, -2.06954 )
shape = SubResource( 7 )

[node name="Throw" type="Sprite" parent="."]
visible = false
position = Vector2( 3.61293, -10.1022 )
texture = ExtResource( 4 )
hframes = 4
frame = 3

[node name="ThrowAnim" type="AnimationPlayer" parent="."]
autoplay = "Blank"
anims/Blank = SubResource( 8 )
anims/Throw = SubResource( 9 )
next/Throw = "Blank"

[node name="SquishDown" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SquishDown"]
position = Vector2( 0, -3 )
shape = SubResource( 10 )

[node name="SquishUp" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SquishUp"]
position = Vector2( 0, -17 )
shape = SubResource( 10 )

[node name="Hazard" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hazard"]
position = Vector2( 0.5, -9.5 )
shape = SubResource( 1 )

[node name="SpringDetect" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="Col" type="CollisionShape2D" parent="SpringDetect"]
position = Vector2( 0, -0.801479 )
shape = SubResource( 11 )

[node name="JumpPuffS" type="Sprite" parent="."]
visible = false
position = Vector2( 0.0136585, 3.08701 )
texture = ExtResource( 5 )
hframes = 6

[node name="JumpPuff" type="AnimationPlayer" parent="."]
anims/Init = SubResource( 12 )
anims/Puff = SubResource( 13 )

[node name="StepLoc1" type="Position2D" parent="."]
position = Vector2( -2, -1 )

[node name="StepLoc2" type="Position2D" parent="."]
position = Vector2( 3, 0 )

[node name="Step1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -12.0
bus = "FX"

[node name="Step2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0
bus = "FX"

[node name="Step3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -12.0
bus = "FX"

[node name="Step4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.0
bus = "FX"

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 4.0
bus = "FX"

[node name="SpringJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 4.0
bus = "FX"

[node name="RockJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -2.0
bus = "FX"

[node name="Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -3.0
bus = "FX"

[node name="Throw2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -4.0
bus = "FX"
[connection signal="area_entered" from="Bounce" to="." method="_on_Bounce_body_entered"]
[connection signal="body_entered" from="Bounce" to="." method="_on_Bounce_body_entered"]
[connection signal="body_entered" from="Hazard" to="." method="_on_Hazard_body_entered"]
